Various boxing/primitive constructor changes